fixed bug with city log items being cut, fixed bug with date string overflow on mobile

--- a/src/components/city-log.scss
+++ b/src/components/city-log.scss
@@ -8,30 +8,22 @@
     padding: 0;
 }
 .city-log li{
+	background-color: rgba(48, 6, 11, 0.19);
+	border: solid 1px rgba(97, 55, 55, 0.41);
+	border-radius: 1em;
     color: rgb(221, 98, 98);
     cursor: pointer;
+	display: grid;
     flex: 1;
     overflow: hidden;
     font-family: Assistant;
-    font-size: 13px;
-    height: 2em;
-    line-height: 2em;
-    margin: 0.5em 0;
+	font-size: calc( 13px + 0.1 * (16 – 13) * ( (100vw – 560px) / ( 560 – 320) ));
+    margin: 0.5em 2px;
     max-width: 20%;
-    text-align: center;
+	padding: 0.2em 0;
+	place-items: center;
 }
 
 .city-log li:hover{
     text-shadow: 0 0 2px rgb(192, 123, 123);
-}
-
-@media (min-width: 420px) and (max-width: 479px){
-    .city-log li{
-        font-size: 15px;
-    }
-}
-@media (min-width: 480px){
-    .city-log li{
-        font-size: 16px;
-    }
 }
